--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -242,9 +242,16 @@ body.dark .switch::before{
 @media only screen and (max-width: 600px) {
       .sidebar{
           visibility: hidden;
-      }
+          transform: translateY(50%) rotate(120deg);
+          -webkit-transform: translateY(50%) rotate(120deg);
+          -moz-transform: translateY(50%) rotate(120deg);
+          -ms-transform: translateY(50%) rotate(120deg);
+          -o-transform: translateY(50%) rotate(120deg);
+          transition: var(--tran-05);
+}
       .sidebar.close{
           visibility: hidden;
+          transition: var(--tran-05);
       }
       .sidebar > i{
           visibility: visible;
