--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -85,7 +85,7 @@ body {
 
   @media only screen and (max-width: 600px) {
       .container{
-        padding-left: 0;gap: 7px 2px;padding-top: 1rem;padding-left: 0;
+        padding-left: 0;padding-top: 1rem;margin-left: 0;
         
       }
       .donate{ visibility:hidden;}
