--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -39,3 +39,12 @@ body{
     background-color: var(--primary-color);
     color: #fff;
 }
+
+body.dark{
+    --body-color: #E4E9F7;
+    --sidebar-color: #FFF;
+    --primary-color: #695CFE;
+    --primary-color-light: #F6F5FF;
+    --toggle-color: #DDD;
+    --text-color: #707070;
+}
