--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -66,7 +66,7 @@ body {
     
   }
   .ButtonsWrapper { grid-area: ButtonsWrapper; 
-    font-size:4rem;padding-top: 1rem;
+    font-size:3.5rem;padding-top: 1rem;display:inline;
   }
   .ButtonsWrapper2 { grid-area: ButtonsWrapper2; 
     color:black;padding-top: 1rem;
@@ -89,5 +89,14 @@ body {
         
       }
       .donate{ visibility:hidden;}
+      .ButtonsWrapper{font-size:3rem;}
+      .ButtonsWrapper2 { padding-top: 1rem;
+        }
+        .ButtonsWrapper3 {  
+          font-size:3rem;
+          }
+          .ButtonsWrapper4 { 
+            font-size:1rem;
+            }
   }
   
