--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -32,7 +32,7 @@ body{
     background-color: var(--body-color);
     background-clip:content-box;
     transition: var(--tran-05);
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 ::selection{
