--- a/assets/styles/tableaxies.css
+++ b/assets/styles/tableaxies.css
@@ -4,7 +4,7 @@
    background-color: #14213D;
     color: #fff;
     font-weight: 500;
-    border: 1px solid #000;
+    border: 0.2rem solid #000;
     padding: 0.26rem;
     font-size: 1.3rem;
     
@@ -27,16 +27,15 @@
     
   }
   
-  #a1m1 {
+  #a1m1{
     font-size: 20px;
     visibility: hidden;
   }
-  
-  #a1m2 {
+  #a1m2{
     font-size: 20px;
     visibility: hidden;
-   
   }
+
   
   #a1h1 {
     font-size: 20px;
